--- a/css/main.css
+++ b/css/main.css
@@ -122,3 +122,9 @@ p{
     font-size: 125%;
     margin:5px;
 }
+#title{
+    writing-mode: vertical-lr;
+    position: absolute;
+    left: 225px;
+    top: 125px;
+}
